# INT3509_2_Nhom_5

./: .gitignore  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 082caa79d00b_initial_migration.py  6b20bf7cc328_add_is_banned_to_users.py  9fab416bdb1b_make_price_data_hypertable.py  a1b2c3d4e5f6_optimize_timescaledb_and_news_index.py  b7c8d9e0f1a2_cleanup_news_schema.py  c1d2e3f4a5b6_add_category_to_news_articles.py  d2e3f4a5b6c7_add_sentiment_to_news_articles.py  df6368582bde_add_news_articles_news_article_tickers_.py  e3f4a5b6c7d8_add_portfolio_watchlist.py  f1a2b3c4d5e6_add_conversations_messages.py  f3736648e594_add_price_data_models.py  g2b3c4d5e6f7_merge_heads.py
backend/docs/: news-instruction.md  price-instruction.md
backend/scripts/: entrypoint.sh
backend/src/: main.py  models.py  router.py
backend/src/ai/: agent.py  exceptions.py  models.py  router.py  schemas.py
backend/src/auth/: dependencies.py  exceptions.py  models.py  router.py  schemas.py
backend/src/blog/: database.py  models.py  router.py  schemas.py
backend/src/core/: celery.py  config.py  database.py  rate_limiter.py  redis.py
backend/src/news/: constants.py  exceptions.py  get_news.py  models.py  router.py  scheduler.py  (+4 more)
backend/tests/: conftest.py  test_news_parsing.py  test_news_router.py  test_price_router.py  test_price_tasks.py
(+59 files in other folders)
